# vetnote

./: .gitignore  README.md  pyproject.toml
.github/workflows/: code-quality.yaml
tests/: llm_client_test.py  main_test.py  models_test.py  note_generator_test.py  reader_test.py  writer_test.py
tests/data/invalid-missing-data/: consultation.json
vetnote/: llm_client.py  main.py  models.py  note_generator.py  reader.py  writer.py
vetnote/prompts/: prompt.txt
